@@ -1,3 +1,10 @@
+Sun Sep 14 16:37:56 BST 2003  Colin Watson  <cjwatson@debian.org>
+
+	* src/encodings.c (get_source_encoding,
+	  get_standard_output_encoding, get_default_device,
+	  get_roff_encoding, get_output_encoding, get_less_charset):
+	  Simplify using new table element struct types.
+
 Sun Sep 14 16:24:00 BST 2003  Colin Watson  <cjwatson@debian.org>
 
 	Make locales like ru_RU.UTF-8 that need the ascii8 device but UTF-8
